# d0-cli-template

./: MANIFEST.in  README.md  application_notes.md  build.sh  pyproject.toml  requirements.txt  setup.py
clitemplate/: __init__.py  config.yml  definitions.py  main.py
clitemplate/tasks/libname/: actions.py
clitemplate/tasks/module1/: actions.py
clitemplate/tasks/module2/: actions.py
