[tool.poetry]
name = "clitemplate"
version = "0.1.0"
description = "Invoke CLI template"
authors = ["Adriana Villela <adriana@dzerolabs.io>"]
license = "apache-2"

[tool.poetry.dependencies]
python = "^3.7"
invoke = "1.4.1"
"ruamel.yaml" = "^0.16.10"
toml = "^0.10.1"


[tool.poetry.dev-dependencies]
pytest = "5.2.2"
pylint = "^2.5.3"
black = "^19.10b0"
pre-commit = "^2.6.0"


[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mycli = "clitemplate.main:program.run"
